# GazeTracking

./: .gitignore  1.25  METHODS.md  OMNIBUS_README.md  README.md  README_2.md  README_IRB.md  SECURITY.md  STUDENT_HANDOUT.md  jsonOutput.json  package.json  pyproject.toml  runexperiment.bat  runexperiment.ps1  runexperiment.sh  server.js  svg_shape_generator.html  unit_tests.md
.github/workflows/: ci.yml  deploy-docs.yml
GazeTrackData_Complete/Raw_Data/: AMRI_2025-05-02T16-37-07-691Z_data.json  PS_2025-05-07T16-01-22-896Z_data.json  TJ_2025-01-09T16-41-35-334Z_data.json  TJ_2025-04-10T15-19-14-232Z_data.json  TJ_2025-05-02T16-21-34-745Z_data.json
Plotting_Analaysis/: PlottingAnalysis.ipynb
Plotting_Analaysis/data/: TEST_2024-12-09T20-54-58-959Z_data.json
StudentFolders/2025_Students/: index_jsincluded.html  objectExclusions.js  package.json  trialManager.js  trialManager.test.js  trialManager.ts
StudentFolders/Development/: trialManager.js
StudentFolders/Development_Student/: index.html  trialManager.js
StudentFolders/Experiment/: TrialManager.js  analysis_example.R  analysis_example.py  export_all_csv.js  index.html  package.json  sanity_check_shapes.js  server.js  simulate_balance.js  trialManager_legacy.js  trial_manifest.json
data/AMRI_2025-05-02T16-37-07-691Z_data/: AMRI_2025-05-02T16-37-07-691Z_data.md
data/ASNE_2025-04-10T15-35-43-216Z_data/: ASNE_2025-04-10T15-35-43-216Z_data.md
data/MIBE_2025-11-19T16-48-22-727Z_data/: MIBE_2025-11-19T16-48-22-727Z_data.json
data/MS_2025-10-24T15-52-14-666Z_data/: MS_2025-10-24T15-52-14-666Z_data.json  MS_2025-10-24T15-52-14-666Z_data.md
data/MS_2025-10-24T15-52-14-666Z_data(1)/: MS_2025-10-24T15-52-14-666Z_data.md
data/PS_2025-01-23T16-32-17-150Z_data/: PS_2025-01-23T16-32-17-150Z_data.md
data/PS_2025-03-06T17-02-49-038Z_data/: PS_2025-03-06T17-02-49-038Z_data.md
data/PS_2025-05-07T15-55-19-550Z_data/: PS_2025-05-07T15-55-19-550Z_data.json  PS_2025-05-07T15-55-19-550Z_data.md
data/PS_2025-05-07T16-01-22-896Z_data/: PS_2025-05-07T16-01-22-896Z_data.md
data/RACH_2025-11-19T16-20-38-402Z_data/: RACH_2025-11-19T16-20-38-402Z_data.json
data/RACH_2025-11-19T16-26-14-907Z_data/: RACH_2025-11-19T16-26-14-907Z_data.json
data/TEST_2025-01-17T19-50-11-658Z_data/: TEST_2025-01-17T19-50-11-658Z_data.json  TEST_2025-01-17T19-50-11-658Z_data.md
data/TEST_2025-12-17T16-32-32-971Z_data/: TEST_2025-12-17T16-32-32-971Z_data.json  TEST_2025-12-17T16-32-32-971Z_data.md
data/TJ_2025-01-09T16-41-35-334Z_data/: TJ_2025-01-09T16-41-35-334Z_data.md
data/TJ_2025-03-13T17-00-10-124Z_data/: TJ_2025-03-13T17-00-10-124Z_data.md
data/TJ_2025-04-10T15-19-14-232Z_data/: TJ_2025-04-10T15-19-14-232Z_data.md
data/TJ_2025-05-02T16-21-34-745Z_data/: TJ_2025-05-02T16-21-34-745Z_data.md
data/to_analyze/: JP_2025-10-13T18-09-10-285Z_data.json  MS_2025-10-24T15-52-14-666Z_data.json  experiment_SMOKE_TEST_2026-01-27T19-32-03-052Z.json
experimentalData/: SampleJsonOutput.md
experimentalData/analyzed/: PS_2025-01-23T16-32-17-150Z_data.json  PS_2025-03-06T17-02-49-038Z_data.json
scripts/: AnalysisPlotting.py  runexperiment.bat  runexperiment.ps1
scripts/AnalysisScripts/: AnalysisPlotting.py  analyze_gaze_heatmaps.py
scripts/RunScripts/: runexperiment.ps1
site/: README.md  index.html
tests/: run_unit_tests.js
(+17 files in other folders)
